test/scale/example-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nameReplace
spec:
  podSelector:
    matchLabels:
      app: labelReplace1
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: labelReplace2
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: labelReplace3
    ports:
    - protocol: TCP
      port: 8080
